Unnumbering the Preface.

--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,7 @@ cover-image: images/cover.jpg
 description: "This is the textbook for MC 451 at SIU Edwardsville."
 ---
 
-# Preface
+# Preface {.unnumbered}
 
 This textbook, *An Introduction to Research Methods in Mass Media*, has been developed as an essential resource for students and researchers delving into the intricate world of mass media research. The journey of crafting this book was driven by a profound understanding of the unique challenges that mass communications scholars encounter when applying quantitative research methods within a rapidly evolving digital landscape.
 
