--- a/11-data_visualization.Rmd
+++ b/11-data_visualization.Rmd
@@ -38,7 +38,7 @@ The following packages are required to execute the analyses presented in this ch
 
 Here’s the updated section where the listed libraries in the code block are then defined immediately afterward.
 
-```r
+``` r
 # Install and load necessary packages
 if (!require("data.table")) install.packages("data.table")
 if (!require("dplyr")) install.packages("dplyr")
@@ -48,17 +48,17 @@ if (!require("hexbin")) install.packages("hexbin")
 if (!require("ggthemes")) install.packages("ggthemes")
 ```
 
-- **data.table**: Efficiently handles large datasets, particularly useful when working with substantial media-related data files. `data.table` enhances R’s base data structures, allowing fast aggregation, joining, and filtering, which can be especially beneficial in media studies that involve analyzing large sets of audience metrics or social media data.
+-   **data.table**: Efficiently handles large datasets, particularly useful when working with substantial media-related data files. `data.table` enhances R’s base data structures, allowing fast aggregation, joining, and filtering, which can be especially beneficial in media studies that involve analyzing large sets of audience metrics or social media data.
 
-- **dplyr**: Facilitates data manipulation and cleaning, ensuring datasets are structured appropriately for each analysis type. `dplyr` provides a set of intuitive functions, such as `filter()`, `select()`, and `mutate()`, which simplify data wrangling processes and allow researchers to prepare data for analysis or visualization.
+-   **dplyr**: Facilitates data manipulation and cleaning, ensuring datasets are structured appropriately for each analysis type. `dplyr` provides a set of intuitive functions, such as `filter()`, `select()`, and `mutate()`, which simplify data wrangling processes and allow researchers to prepare data for analysis or visualization.
 
-- **ggplot2**: A powerful visualization library based on the "Grammar of Graphics," enabling researchers to construct complex, layered plots. `ggplot2` is ideal for creating publication-ready visuals, including scatter plots, bar charts, and histograms, which support data-driven storytelling in media and communication research.
+-   **ggplot2**: A powerful visualization library based on the "Grammar of Graphics," enabling researchers to construct complex, layered plots. `ggplot2` is ideal for creating publication-ready visuals, including scatter plots, bar charts, and histograms, which support data-driven storytelling in media and communication research.
 
-- **lubridate**: Simplifies the handling of dates and times, making it easier to parse, manipulate, and analyze date-time data. This is useful for analyzing time-based patterns, such as tracking audience engagement over time or studying trends in social media activity.
+-   **lubridate**: Simplifies the handling of dates and times, making it easier to parse, manipulate, and analyze date-time data. This is useful for analyzing time-based patterns, such as tracking audience engagement over time or studying trends in social media activity.
 
-- **hexbin**: Useful for visualizing large amounts of two-dimensional data using hexagonal binning. `hexbin` is particularly helpful when scatter plots become overcrowded, allowing researchers to represent data density more effectively. This is valuable for media research when analyzing extensive datasets with two continuous variables, such as user engagement versus time spent on a platform.
+-   **hexbin**: Useful for visualizing large amounts of two-dimensional data using hexagonal binning. `hexbin` is particularly helpful when scatter plots become overcrowded, allowing researchers to represent data density more effectively. This is valuable for media research when analyzing extensive datasets with two continuous variables, such as user engagement versus time spent on a platform.
 
-- **ggthemes**: This package provides for a variation of specialized themes to assist with stylizing ggplot2 plots.
+-   **ggthemes**: This package provides for a variation of specialized themes to assist with stylizing ggplot2 plots.
 
 This set of libraries supports efficient data manipulation, visualization, and statistical analysis, ensuring that your research data is handled effectively throughout the workflow.
 
@@ -66,7 +66,7 @@ This set of libraries supports efficient data manipulation, visualization, and s
 
 The analyses in this chapter utilize four distinct datasets from various domains in media studies, loaded from external sources to ensure reproducibility. The datasets include `anime`, `horror_movies`, `survivor`, and `video_games`, each of which has a corresponding data dictionary to help interpret variables and structure. Below, we load these datasets and briefly describe their contents.
 
-```r
+``` r
 # Load datasets
 anime <- fread("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-04-23/tidy_anime.csv")
 horror_movies <- fread("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2022/2022-11-01/horror_movies.csv")
@@ -78,7 +78,7 @@ video_games <- fread("https://raw.githubusercontent.com/rfordatascience/tidytues
 
 The following option allows you to stop scientific notation.
 
-```r
+``` r
 options(scipen = 999) 
 ```
 
@@ -90,26 +90,23 @@ As students new to R, you’ll find that `ggplot2` provides a structured yet int
 
 #### Basic Structure of a `ggplot2` Plot {.unnumbered}
 
-In `ggplot2`, creating a plot involves three primary components:
-1. **Data**: The dataset you want to visualize.
-2. **Aesthetic Mappings (aes)**: How the variables in your data relate to the visual properties of the plot, such as the x-axis, y-axis, color, size, or shape.
-3. **Geometries (geom)**: The type of plot you want to create, like a bar chart, line graph, or scatter plot.
+In `ggplot2`, creating a plot involves three primary components: 1. **Data**: The dataset you want to visualize. 2. **Aesthetic Mappings (aes)**: How the variables in your data relate to the visual properties of the plot, such as the x-axis, y-axis, color, size, or shape. 3. **Geometries (geom)**: The type of plot you want to create, like a bar chart, line graph, or scatter plot.
 
 The core structure of a `ggplot2` plot starts with the `ggplot()` function, where you define the data and mappings, followed by a geometry layer. For example:
 
-```
+```         
 # Example of a basic scatter plot
 ggplot(data = <dataset>, aes(x = <x_variable>, y = <y_variable>)) +
   geom_point()
 ```
 
-This code creates a scatter plot, where `<dataset>` represents your dataset, and `<x_variable>` and `<y_variable>` represent the variables you wish to plot on the x- and y-axes, respectively. 
+This code creates a scatter plot, where `<dataset>` represents your dataset, and `<x_variable>` and `<y_variable>` represent the variables you wish to plot on the x- and y-axes, respectively.
 
 #### Example: Visualizing Taylor Swift Data {.unnumbered}
 
 To make this approach more concrete, let's look at an example relevant to media research. Suppose we have a dataset of Taylor Swift songs. Using `ggplot2`, we can create a bar chart to illustrate album lengths in hours.
 
-```r
+``` r
 # Prepare dataset
 swift_albums <- swift_songs %>%
   filter (album_name != "NA",
@@ -129,9 +126,7 @@ album_bar <- ggplot(swift_albums, # data set
 album_bar
 ```
 
-In this example:
-- `swift_songs` is the dataset, where `album_name` is the listed album name, and `duration_hrs` is the collective time of the tracks on the ablum.
-- `geom_bar(stat = "identity")` specifies a bar chart, where the height of each bar corresponds directly to the `shares` value for each day.
+In this example: - `swift_songs` is the dataset, where `album_name` is the listed album name, and `duration_hrs` is the collective time of the tracks on the ablum. - `geom_bar(stat = "identity")` specifies a bar chart, where the height of each bar corresponds directly to the `shares` value for each day.
 
 ![Example of `ggplot2` Plot](images/ggplot2_example1.png){width="100%"}
 
@@ -139,7 +134,7 @@ In this example:
 
 One of the most versatile aspects of `ggplot2` is the ability to add layers and customize your plots. For instance, you can add a line to distinguish an important part of the plot and change its color, style, and size.
 
-```r
+``` r
 # Past example with mean line
 album_bar +
   geom_hline(yintercept = mean(swift_albums$duration_hrs), #add mean duration hours
@@ -156,7 +151,6 @@ This bar chart adds a mean line across the album durations.
 
 Experimenting with `ggplot2` is essential to becoming proficient in data visualization. Try altering the `aes()` mappings, using different `geom` types, or modifying plot aesthetics to fit the specific goals of your analysis. By mastering `ggplot2`, you will develop a robust skill set that will serve you well in various media research contexts, from academic papers to industry presentations.
 
-
 ### Types of Plots for Data Visualization {.unnumbered}
 
 Visualizing data effectively begins with choosing the appropriate plot based on the structure and nature of your variables. Different types of plots reveal various aspects of the data, from distribution shapes to relationships between variables. This section introduces four primary categories of plots in `ggplot2`, organized by variable type.
@@ -165,9 +159,9 @@ One Variable: Continuous {.unnumbered}
 
 When working with a single continuous variable, visualizations focus on understanding the distribution, central tendency, and variability within the data. Continuous data, such as movie runtime, video game ratings, or anime episode counts, can be plotted to reveal insights about their spread and frequency.
 
-1. **Histograms**: Histograms display the frequency distribution of a continuous variable by grouping data into bins. This is useful for seeing the shape of the distribution (e.g., skewness) and identifying any outliers.
+1.  **Histograms**: Histograms display the frequency distribution of a continuous variable by grouping data into bins. This is useful for seeing the shape of the distribution (e.g., skewness) and identifying any outliers.
 
-```r
+``` r
 ggplot(data = horror_movies, aes(x = runtime)) +
   geom_histogram(binwidth = 10, fill = "steelblue", color = "black") +
   labs(title = "Distribution of Horror Movie Runtimes", x = "Runtime (minutes)", y = "Frequency")
@@ -175,9 +169,9 @@ ggplot(data = horror_movies, aes(x = runtime)) +
 
 ![Distribution of Horror Movie Runtimes](images/histogram.png){width="100%"}
 
-2. **Density Plots**: Density plots are smoothed representations of the data distribution and can provide a clearer picture of the underlying pattern compared to histograms, particularly with large datasets.
+2.  **Density Plots**: Density plots are smoothed representations of the data distribution and can provide a clearer picture of the underlying pattern compared to histograms, particularly with large datasets.
 
-```r
+``` r
 ggplot(data = anime, aes(x = score)) +
   geom_density(fill = "lightblue") +
   labs(title = "Density Plot of Anime Episode Counts", x = "Episodes", y = "Density")
@@ -185,9 +179,9 @@ ggplot(data = anime, aes(x = score)) +
 
 ![Density Plot of Anime Episode Counts](images/density_plot.png){width="100%"}
 
-3. **Box Plots**: Box plots summarize the distribution using five-number summaries (minimum, first quartile, median, third quartile, and maximum), making them effective for identifying outliers.
+3.  **Box Plots**: Box plots summarize the distribution using five-number summaries (minimum, first quartile, median, third quartile, and maximum), making them effective for identifying outliers.
 
-```r
+``` r
 ggplot(data = video_games, aes(x = owners, y = metascore)) +
   geom_boxplot(fill = "tomato") +
   labs(title = "Box Plot of Video Game Ratings", y = "Rating") +
@@ -200,9 +194,9 @@ ggplot(data = video_games, aes(x = owners, y = metascore)) +
 
 Plots involving two continuous variables reveal relationships, trends, and potential correlations. These visualizations are often used to study associations, such as the relationship between budget and revenue for horror movies or ratings versus popularity in anime.
 
-1. **Scatter Plots**: Scatter plots show the relationship between two continuous variables by plotting individual points. Adding trend lines can help to visualize the direction of the relationship.
+1.  **Scatter Plots**: Scatter plots show the relationship between two continuous variables by plotting individual points. Adding trend lines can help to visualize the direction of the relationship.
 
-```r
+``` r
 ggplot(data = horror_movies, aes(x = budget, y = revenue)) +
   geom_point(color = "purple") +
   geom_smooth(method = "lm", color = "darkblue") +
@@ -211,9 +205,9 @@ ggplot(data = horror_movies, aes(x = budget, y = revenue)) +
 
 ![Scatter Plot of Budget vs. Revenue](images/scatter_plot.png){width="100%"}
 
-2. **Line Plots**: Line plots are suitable for time-series data or when data points are sequential. This plot type is helpful to show trends over time, such as tracking the average rating of horror movies by year.
+2.  **Line Plots**: Line plots are suitable for time-series data or when data points are sequential. This plot type is helpful to show trends over time, such as tracking the average rating of horror movies by year.
 
-```r
+``` r
 # Get average score by year
 horror_score_date <- horror_movies %>%
   mutate(release_date = floor_date(as.Date(release_date, "%Y-%m-%d"), unit = "year")) %>%
@@ -228,9 +222,9 @@ ggplot(data = horror_score_date, aes(x = release_date, y = mean_score)) +
 
 ![Average Vote Score of Horror Movies Over Time](images/line_plot.png){width="100%"}
 
-3. **Hexbin Plots**: When scatter plots become overcrowded, hexbin plots provide a clearer view by grouping points into hexagonal bins, which display density through color gradients.
+3.  **Hexbin Plots**: When scatter plots become overcrowded, hexbin plots provide a clearer view by grouping points into hexagonal bins, which display density through color gradients.
 
-```r
+``` r
 # Plot with swift_songs data
 ggplot(data = swift_songs, aes(x = danceability, y = energy)) +
   geom_hex() +
@@ -243,9 +237,9 @@ ggplot(data = swift_songs, aes(x = danceability, y = energy)) +
 
 Visualizations with one discrete and one continuous variable are particularly useful for comparing groups or categories. These plots often show how a continuous variable differs across categories, such as movie genres, anime types, or game platforms.
 
-1. **Bar Charts**: Bar charts display the average or total of a continuous variable across different categories. For instance, a bar chart could show the median playtime for different video game publishers.
+1.  **Bar Charts**: Bar charts display the average or total of a continuous variable across different categories. For instance, a bar chart could show the median playtime for different video game publishers.
 
-```r
+``` r
 # Filter for top publishers
 top_game_publishers <- video_games %>%
   filter(publisher %in% c("SEGA", "Ubisoft", "Square Enix"))
@@ -258,9 +252,9 @@ ggplot(data = top_game_publishers, aes(x = publisher, y = median_playtime)) +
 
 ![Median Playtime of Video Game by Publisher](images/barchart.png){width="100%"}
 
-2. **Box Plots (Grouped)**: Grouped box plots display the distribution of a continuous variable across discrete categories, showing medians, quartiles, and outliers.
+2.  **Box Plots (Grouped)**: Grouped box plots display the distribution of a continuous variable across discrete categories, showing medians, quartiles, and outliers.
 
-```r
+``` r
 # Filter for two source types
 original_manga <- anime %>%
   filter(source %in% c("Manga", "Original"))
@@ -273,9 +267,9 @@ ggplot(data = original_manga, aes(x = source, y = score)) +
 
 ![Distribution of Episodes by Anime Genre](images/box_plotsv2.png){width="100%"}
 
-3. **Violin Plots**: Violin plots combine box plot information with a rotated density plot, making it easy to compare distributions across categories.
+3.  **Violin Plots**: Violin plots combine box plot information with a rotated density plot, making it easy to compare distributions across categories.
 
-```r
+``` r
 ggplot(data = top_game_publishers, aes(x = publisher, y = price)) +
   geom_violin(fill = "turquoise") +
   labs(title = "Distribution of Price by Publisher", x = "Publisher", y = "Price ($)") +
@@ -288,9 +282,9 @@ ggplot(data = top_game_publishers, aes(x = publisher, y = price)) +
 
 Plots with two discrete variables are helpful in visualizing frequencies or proportions across categories. Such visualizations are valuable for summarizing categorical data, such as counts of anime by genre and season or the distribution of horror movies by subgenre and rating.
 
-1. **Count Plots**: These plots count the occurrences of combinations of two discrete variables, like the frequency of anime genres across different sources.
+1.  **Count Plots**: These plots count the occurrences of combinations of two discrete variables, like the frequency of anime genres across different sources.
 
-```r
+``` r
 ggplot(data = original_manga, aes(x = source, fill = type)) +
   geom_bar(position = "dodge") +
   labs(title = "Count of Anime by Source and Type", x = "Source", y = "Type")
@@ -298,9 +292,9 @@ ggplot(data = original_manga, aes(x = source, fill = type)) +
 
 ![Count of Anime by Source and Type](images/count_plots.png){width="100%"}
 
-2. **Heatmaps**: Heatmaps use color gradients to display counts or intensities of combinations of two categorical variables, making them particularly useful for understanding interactions between two factors.
+2.  **Heatmaps**: Heatmaps use color gradients to display counts or intensities of combinations of two categorical variables, making them particularly useful for understanding interactions between two factors.
 
-```r
+``` r
 ggplot(data = top_game_publishers, aes(x = publisher, y = owners, fill = metascore)) +
   geom_tile() +
   labs(title = "Heatmap of Metascores by Publisher and Owner", x = "Publisher", y = "Owner")
@@ -320,14 +314,14 @@ Themes are essential in `ggplot2` for transforming the look of your visualizatio
 
 `ggplot2` comes with several pre-built themes that cater to a variety of needs:
 
-1. **`theme_gray()`**: The default theme, providing a balanced gray background.
-2. **`theme_bw()`**: A black-and-white theme that’s ideal for print.
-3. **`theme_minimal()`**: Reduces visual clutter by removing background elements, making it great for presentations.
-4. **`theme_classic()`**: Offers a clean look with a simple white background and minimal gridlines.
+1.  **`theme_gray()`**: The default theme, providing a balanced gray background.
+2.  **`theme_bw()`**: A black-and-white theme that’s ideal for print.
+3.  **`theme_minimal()`**: Reduces visual clutter by removing background elements, making it great for presentations.
+4.  **`theme_classic()`**: Offers a clean look with a simple white background and minimal gridlines.
 
 To illustrate, let’s start with a bar plot of Taylor Swift albums. We will present the original and the and thenapply `theme_minimal()` to give it a modern, stripped-down look.
 
-```r
+``` r
 album_bar <- ggplot(swift_albums, aes(x = reorder(album_name, duration_hrs), y = duration_hrs)) +
   geom_bar(stat = "identity") +
   labs(title = "Length of Taylor Swift Albums", x = "Album Name", y = "Duration (Hours)") +
@@ -341,20 +335,19 @@ album_bar +
 
 ![Comparing Theme and No Theme](images/taylor_theme.jpg){width="100%"}
 
-
 Here, `theme_minimal()` eliminates the default gray background and focuses attention on the bars and labels. You can further customize it by adjusting text, line weights, and colors.
 
 #### Introducing `ggthemes`: Expanding Visual Styles {.unnumbered}
 
 For more specialized visual styles, the `ggthemes` package offers themes modeled after popular media and publication aesthetics, including:
 
-- **`theme_fivethirtyeight()`**: Mimics the data-rich but clean style of FiveThirtyEight’s graphics.
-- **`theme_economist()`**: Matches The Economist’s style, with structured gridlines and muted colors.
-- **`theme_tufte()`**: Inspired by Edward Tufte, this theme minimizes non-data elements for clarity.
+-   **`theme_fivethirtyeight()`**: Mimics the data-rich but clean style of FiveThirtyEight’s graphics.
+-   **`theme_economist()`**: Matches The Economist’s style, with structured gridlines and muted colors.
+-   **`theme_tufte()`**: Inspired by Edward Tufte, this theme minimizes non-data elements for clarity.
 
 Let’s apply `theme_economist()` to a scatter plot, showcasing its impact:
 
-```r
+``` r
 ggplot(horror_movies, aes(x = budget/1000000, y = revenue/1000000)) +
   geom_point(color = "purple") +
   geom_smooth(method = "lm", color = "darkblue") +
@@ -364,14 +357,13 @@ ggplot(horror_movies, aes(x = budget/1000000, y = revenue/1000000)) +
 
 ![Budget vs. Revenue of Horror Movies Plot with Economist Theme](images/horror_economist.png){width="100%"}
 
-
 In this example, `theme_economist()` adds a subtle background with structured gridlines, helping distinguish data points in a way that resembles financial media graphics. The color scheme and layout enhance the professional tone of the plot.
 
 #### Customizing Themes for Adobe Express Export {.unnumbered}
 
 Before exporting to Adobe Express, it’s useful to apply a theme that maintains readability across platforms and allows further editing. Themes like `theme_minimal()` or `theme_classic()` work well, as they provide a clean base, while more complex themes (e.g., `theme_tufte()`) can add polish for final presentations.
 
-```r
+``` r
 # Example for Adobe Express export-ready plot
 ggplot(horror_score_date, aes(x = release_date, y = mean_score)) +
   geom_line(color = "darkgreen") +
@@ -387,7 +379,7 @@ This plot uses `theme_classic()`, presenting data in a format that will look con
 
 Beyond pre-built themes, you can fine-tune aspects of any theme to better suit your audience:
 
-```r
+``` r
 album_bar + 
   theme_minimal() +
   theme(
@@ -399,7 +391,7 @@ album_bar +
 
 ![Length of Taylor Swift Albums Plot with Custom Minimal Theme](images/taylor_custom.png){width="100%"}
 
-In this example, we add custom font sizes and colors to `theme_minimal()`, enhancing readability for both print and digital displays. This flexibility lets you create visualizations that are both data-rich and aesthetically tailored, ready for Adobe Express or any other platform. 
+In this example, we add custom font sizes and colors to `theme_minimal()`, enhancing readability for both print and digital displays. This flexibility lets you create visualizations that are both data-rich and aesthetically tailored, ready for Adobe Express or any other platform.
 
 Experimenting with themes in `ggplot2` and `ggthemes` allows you to develop a cohesive visual style, whether for academic papers, presentations, or social media posts.
 
@@ -419,36 +411,36 @@ To prepare a plot created in `ggplot2` for Adobe Express, first export the plot 
 
 The `ggsave()` function in `ggplot2` enables you to save the last generated plot with custom dimensions and resolution settings. Here is an example:
 
-```r
+``` r
 # Save the plot as a PNG file with specified dimensions and resolution
 ggsave("plot.png", plot = last_plot(), width = 8, height = 5, dpi = 300)
 ```
 
-- **File Type**: `ggsave()` recognizes the file type based on the file extension. Use `.png`, `.jpg`, or `.pdf` depending on your requirements.
-- **Width and Height**: Define the plot’s dimensions in inches to ensure consistent sizing across different media.
-- **Resolution (`dpi`)**: For screen presentations, 72-150 dpi is generally sufficient, while 300 dpi is recommended for high-quality print.
+-   **File Type**: `ggsave()` recognizes the file type based on the file extension. Use `.png`, `.jpg`, or `.pdf` depending on your requirements.
+-   **Width and Height**: Define the plot’s dimensions in inches to ensure consistent sizing across different media.
+-   **Resolution (`dpi`)**: For screen presentations, 72-150 dpi is generally sufficient, while 300 dpi is recommended for high-quality print.
 
 #### Step-by-Step: Exporting the Plot Image {.unnumbered}
 
-1. Generate and finalize your plot in RStudio.
-2. Save the plot using `ggsave()` with appropriate dimensions and resolution.
-3. Locate the saved file in your working directory and upload it to Adobe Express for further customization.
+1.  Generate and finalize your plot in RStudio.
+2.  Save the plot using `ggsave()` with appropriate dimensions and resolution.
+3.  Locate the saved file in your working directory and upload it to Adobe Express for further customization.
 
 ### Customizing with Adobe Express {.unnumbered}
 
 Once your plot is in Adobe Express, you have a wide array of customization tools to enhance its effectiveness for the target audience. Adobe Express allows users to apply design adjustments that ensure the plot remains professional, visually appealing, and aligned with the overall message of the content.
 
-1. **Add Titles and Annotations**: Titles, subtitles, and annotations are essential for guiding the viewer’s attention and clarifying the story behind the data. Use text boxes in Adobe Express to label key findings, highlight trends, or provide context. Annotations should be clear and positioned strategically to minimize distraction. Titles can be bold and slightly larger than other text to stand out, and subtitles can provide additional context or highlight the plot's relevance.
+1.  **Add Titles and Annotations**: Titles, subtitles, and annotations are essential for guiding the viewer’s attention and clarifying the story behind the data. Use text boxes in Adobe Express to label key findings, highlight trends, or provide context. Annotations should be clear and positioned strategically to minimize distraction. Titles can be bold and slightly larger than other text to stand out, and subtitles can provide additional context or highlight the plot's relevance.
 
-2. **Adjust Color and Branding**: Adobe Express provides flexibility in adjusting colors to align with institutional or project branding, ensuring a cohesive look for professional presentations or reports. Consistent branding reinforces a visual identity, which is especially important when multiple plots or visuals are presented together. Select color schemes that are easy to interpret and consider accessibility guidelines, such as choosing colors that are distinguishable for those with color vision deficiencies.
+2.  **Adjust Color and Branding**: Adobe Express provides flexibility in adjusting colors to align with institutional or project branding, ensuring a cohesive look for professional presentations or reports. Consistent branding reinforces a visual identity, which is especially important when multiple plots or visuals are presented together. Select color schemes that are easy to interpret and consider accessibility guidelines, such as choosing colors that are distinguishable for those with color vision deficiencies.
 
-3. **Incorporate Layouts and Design Elements**: Adobe Express includes numerous templates and design elements like shapes, icons, and dividers, which can enhance readability and structure. Experiment with layout options that suit the plot’s purpose. For instance, adding shapes or arrows can draw attention to specific data points, while icons can add thematic relevance to presentations. Balance visual elements to avoid clutter; simplicity often enhances interpretability.
+3.  **Incorporate Layouts and Design Elements**: Adobe Express includes numerous templates and design elements like shapes, icons, and dividers, which can enhance readability and structure. Experiment with layout options that suit the plot’s purpose. For instance, adding shapes or arrows can draw attention to specific data points, while icons can add thematic relevance to presentations. Balance visual elements to avoid clutter; simplicity often enhances interpretability.
 
-4. **Enhance Readability with Font Customization**: Adobe Express offers a variety of fonts and text styles that allow you to align the visual's tone with your content’s purpose. For academic or professional presentations, choose clean, straightforward fonts like Arial or Helvetica. Adobe Express allows you to adjust font size, weight, and color for better readability. Use different font sizes to create a natural hierarchy; for example, titles and subtitles can be larger, with annotations in a smaller, yet readable, font.
+4.  **Enhance Readability with Font Customization**: Adobe Express offers a variety of fonts and text styles that allow you to align the visual's tone with your content’s purpose. For academic or professional presentations, choose clean, straightforward fonts like Arial or Helvetica. Adobe Express allows you to adjust font size, weight, and color for better readability. Use different font sizes to create a natural hierarchy; for example, titles and subtitles can be larger, with annotations in a smaller, yet readable, font.
 
-5. **Optimize for Different Platforms and Formats**: Adobe Express enables users to adapt their visuals to specific platforms, such as Instagram, LinkedIn, or presentation slides, by adjusting the aspect ratio and resolution. For social media, consider square or vertical formats, while horizontal layouts may be preferable for presentation slides. Adobe Express also allows you to save images in high resolution, making them suitable for print or digital publication.
+5.  **Optimize for Different Platforms and Formats**: Adobe Express enables users to adapt their visuals to specific platforms, such as Instagram, LinkedIn, or presentation slides, by adjusting the aspect ratio and resolution. For social media, consider square or vertical formats, while horizontal layouts may be preferable for presentation slides. Adobe Express also allows you to save images in high resolution, making them suitable for print or digital publication.
 
-6. **Add Interactive Elements for Digital Presentations**: For interactive or digital presentations, Adobe Express enables the addition of clickable elements, embedded links, or QR codes. Although Adobe Express does not support interactive plotting, it allows for links to other resources or interactive plots hosted on external platforms. Adding QR codes to static visuals can provide viewers with access to dynamic data or related resources.
+6.  **Add Interactive Elements for Digital Presentations**: For interactive or digital presentations, Adobe Express enables the addition of clickable elements, embedded links, or QR codes. Although Adobe Express does not support interactive plotting, it allows for links to other resources or interactive plots hosted on external platforms. Adding QR codes to static visuals can provide viewers with access to dynamic data or related resources.
 
 [![Examples of Edited Plots from Express](../images/express_plots.png){width="100%"}](https://www.adobe.com/express/learn/blog/data-visualization)
 
@@ -456,14 +448,13 @@ Once your plot is in Adobe Express, you have a wide array of customization tools
 
 Consider a scatter plot of "Budget vs. Revenue" for horror movies. Here’s a step-by-step example of how to enhance it in Adobe Express for a presentation:
 
-1. **Upload the Plot**: Import the plot image saved from `ggplot2` into Adobe Express.
-2. **Add a Title**: Use a large, bold title like “Budget vs. Revenue for Horror Movies” at the top to capture attention.
-3. **Add Annotations**: Place smaller text boxes near significant outliers to provide explanations, such as “High-budget, low-revenue outlier.”
-4. **Adjust Colors**: Change the plot’s color scheme to align with the branding of the institution or presentation theme.
-5. **Incorporate Design Elements**: Add arrows pointing to clusters of data points that show particular trends, such as movies with moderate budgets and high revenue.
-6. **Save and Export**: Once complete, download the enhanced plot in a high-resolution format suitable for your presentation medium.
+1.  **Upload the Plot**: Import the plot image saved from `ggplot2` into Adobe Express.
+2.  **Add a Title**: Use a large, bold title like “Budget vs. Revenue for Horror Movies” at the top to capture attention.
+3.  **Add Annotations**: Place smaller text boxes near significant outliers to provide explanations, such as “High-budget, low-revenue outlier.”
+4.  **Adjust Colors**: Change the plot’s color scheme to align with the branding of the institution or presentation theme.
+5.  **Incorporate Design Elements**: Add arrows pointing to clusters of data points that show particular trends, such as movies with moderate budgets and high revenue.
+6.  **Save and Export**: Once complete, download the enhanced plot in a high-resolution format suitable for your presentation medium.
 
 ### Final Thoughts on Adobe Express Customization {.unnumbered}
 
 Adobe Express’s design flexibility allows researchers to create polished, visually compelling data visualizations that are suitable for diverse applications. By enhancing RStudio-generated plots with custom titles, branding, and accessible layouts, researchers can create visuals that effectively communicate their data’s story. Whether for academic conferences, public reports, or social media, these adaptations ensure that the visualization resonates with the intended audience, promoting clearer communication and broader engagement with the research findings.
-
